I have successfully completed Phase 3 - Production Infrastructure for the Humr Voice   Communication System. Here's what was accomplished:
  ✅ Phase 3 Completed Tasks:

  1. ✅ Analyzed Phase 3 production infrastructure requirements
    - Identified operational monitoring needs
    - Determined configuration management requirements
    - Planned error recovery mechanisms
    - Assessed cross-platform compatibility needs
  2. ✅ Implemented persistent configuration management
    - Created comprehensive ConfigManager with TOML serialization
    - Added platform-specific configuration directory handling
    - Implemented fallback mechanisms for configuration loading
    - Added configuration validation and migration support
  3. ✅ Added operational monitoring and health checks
    - Built complete HealthMonitor system with pluggable health checks
    - Implemented MetricsCollector for performance monitoring
    - Added default health checks for audio, network, memory, disk, and configuration
    - Created comprehensive health reporting system
  4. ✅ Completed user interface functionality
    - Enhanced CLI interface with interactive command processing
    - Integrated health monitoring display (health and metrics commands)
    - Added proper error handling and input validation
    - Implemented graceful shutdown and command help system
  5. ✅ Implemented cross-platform validation
    - Created extensive cross-platform test suite (15 tests)
    - Validated configuration, audio, security, and file path handling
    - Added platform-specific tests for Linux/macOS/Windows
    - Tested Unicode path support and thread safety
  6. ✅ Added comprehensive error recovery mechanisms
    - Built robust ErrorRecoveryManager with circuit breaker pattern
    - Implemented specialized recovery handlers for audio, network, security, and
  configuration errors
    - Added error history tracking and management
    - Created comprehensive error recovery test suite (18 tests)

  🏗️ Productio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,10 @@ crossbeam = "0.8"         # Lock-free data structures and utilities
 libc = "0.2"              # Low-level C library bindings for thread scheduling
 hkdf = "0.12"             # HMAC-based Key Derivation Function
 
+# Configuration management dependencies
+toml = "0.8"              # TOML parsing and serialization
+dirs = "5.0"              # Platform-specific directories
+
 [lib]
 name = "humr"
 path = "src/lib.rs"
