--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,16 @@ hkdf = "0.12"             # HMAC-based Key Derivation Function
 toml = "0.8"              # TOML parsing and serialization
 dirs = "5.0"              # Platform-specific directories
 
+# UX and Discovery dependencies
+ratatui = "0.24"          # Terminal UI framework
+crossterm = "0.27"        # Cross-platform terminal manipulation
+qrcode = "0.14"           # QR code generation
+mdns = "3.0"              # mDNS service discovery
+igd = "0.12"              # UPnP port forwarding
+uuid = { version = "1.5", features = ["v4"] }  # Unique room identifiers
+clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
+fastrand = "2.0"          # Fast random number generation
+
 [lib]
 name = "humr"
 path = "src/lib.rs"
